# Rustyjack

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  APP_RS_REFACTOR_PLAN.md  BINARY_DEPENDENCIES_REFACTORING.md  BUTTON_FIX.md  CLAUDE.md  COMMIT_MESSAGE.txt  COMPILE_FIX_COMPLETE.md  Cargo.toml  DEAUTH_ATTACK_GUIDE.md  DEPLOYMENT_GUIDE.md  DHCP_SERVER_IMPLEMENTATION.md  DISPLAY_FIXES_SUMMARY.md  DISPLAY_FIX_README.md  DNS_SERVER_IMPLEMENTATION.md  ERROR_HANDLING_ENHANCEMENT.md  ERROR_HANDLING_IMPROVEMENTS.md  ERROR_HANDLING_REVIEW.md  FIXES_APPLIED.md  FIX_INSTRUCTIONS.md  GIT_COMMIT_MESSAGE.txt  HARDWARE_DETECTION_FEATURE.md  HOSTAPD_IMPLEMENTATION_COMPLETE.md  HOTSPOT_COMPLETE_FIX.md  HOTSPOT_DEVICE_HISTORY.md  HOTSPOT_FIX_SUMMARY.md  HOTSPOT_RFKILL_FIX.md  IMPLEMENTATION_COMPLETE.md  INTERFACE_ISOLATION_IMPLEMENTATION.md  LOGGING_POLICY.md  LOOT_VIEWER_ARCHITECTURE.md  LOOT_VIEWER_GUIDE.md  LOOT_VIEWER_IMPLEMENTATION.md  Logging_report_progress.md  NETWORKMANAGER_IMPLEMENTATION.md  PREBUILT_INSTALLER_REVIEW.md  README.md  README_FIX.md  (+45 more)
crates/rustyjack-core/: Cargo.toml
crates/rustyjack-core/src/: arp_helpers.rs  audit.rs  dhcp_helpers.rs  dns_helpers.rs  lib.rs  main.rs  mount.rs  mutation_guard.rs  netlink_helpers.rs  operations.rs  physical_access.rs  runtime.rs  test_artifacts.rs  wireless_native.rs
crates/rustyjack-core/src/external_tools/: anti_forensics.rs  archive_ops.rs  evasion.rs  git_ops.rs  mod.rs  physical_access.rs
crates/rustyjack-core/src/services/: error.rs  hotspot.rs  logs.rs  mod.rs  mount.rs  portal.rs  scan.rs  stats.rs  system.rs  update.rs  wifi.rs
crates/rustyjack-core/src/system/: dns.rs  interface_selection.rs  isolation.rs  isolation_guard.rs  isolation_policy.rs  loot_session.rs  mod.rs  ops.rs  preference.rs  routing.rs  setup.rs
crates/rustyjack-daemon/: Cargo.toml
crates/rustyjack-daemon/src/: auth.rs  config.rs  dispatch.rs  lib.rs  locks.rs  main.rs  netlink_watcher.rs  ops_apply.rs  server.rs  state.rs  systemd.rs  tail.rs  telemetry.rs  validation.rs
crates/rustyjack-daemon/src/jobs/: blocking.rs  cancel_bridge.rs  mod.rs
crates/rustyjack-daemon/src/jobs/kinds/: core_command.rs  hotspot_start.rs  interface_select.rs  mod.rs  mount_start.rs  noop.rs  portal_start.rs  scan.rs  sleep.rs  (+4 more)
crates/rustyjack-daemon/tests/: daemon_socket.rs
crates/rustyjack-ethernet/: Cargo.toml
crates/rustyjack-ethernet/src/: lib.rs
crates/rustyjack-install/: Cargo.toml
crates/rustyjack-install/src/: lib.rs
crates/rustyjack-logging/: Cargo.toml
crates/rustyjack-logging/src/: config.rs  fs.rs  init.rs  lib.rs  retention.rs  targets.rs  watch.rs
crates/rustyjack-netlink/: Cargo.toml
crates/rustyjack-netlink/src/: arp.rs  arp_scanner.rs  arp_spoofer.rs  bridge.rs  dhcp.rs  dhcp_server.rs  dns_server.rs  error.rs  hostapd.rs  interface.rs  iptables.rs  lib.rs  nf_tables.rs  rfkill.rs  route.rs  supplicant.rs  systemd.rs  wireless.rs  wpa.rs
crates/rustyjack-netlink/src/station/: backend.rs  dbus.rs  mod.rs
crates/rustyjack-portal/: Cargo.toml
crates/rustyjack-portal/src/: config.rs  lib.rs  logging.rs  server.rs  state.rs
crates/rustyjack-ui/: Cargo.toml
crates/rustyjack-ui/src/: app.rs  config.rs  core.rs  display.rs  input.rs  lib.rs  main.rs  menu.rs  stats.rs  types.rs  util.rs
crates/rustyjack-ui/src/app/: dialogs.rs  encryption.rs  ethernet.rs  hotspot.rs  identity.rs  iface_select.rs  loot.rs  menu.rs  preflight.rs  recon.rs  report.rs  settings.rs  state.rs  system.rs  tests.rs  usb.rs
crates/rustyjack-ui/src/ops/: ethernet.rs  mod.rs  recon.rs  wifi.rs
crates/rustyjack-ui/src/ui/: layout.rs  mod.rs
crates/rustyjack-ui/tests/: core_dispatch_guard.rs
crates/rustyjack-wireless/: Cargo.toml
crates/rustyjack-wireless/src/: capture.rs  evil_twin.rs  handshake.rs  hotspot.rs  inject.rs  karma.rs  lib.rs  netlink_helpers.rs  nl80211.rs  nl80211_queries.rs  pcap.rs  pmkid.rs  process_helpers.rs  radiotap.rs  recon.rs  rfkill_helpers.rs
rustyjack-core/: Cargo.toml
rustyjack-core/src/: anti_forensics.rs  arp_helpers.rs  audit.rs  autopilot.rs  cancel.rs  cli.rs  dhcp_helpers.rs  dns_helpers.rs  evasion.rs  lib.rs  main.rs  mount.rs  netlink_helpers.rs  operations.rs  physical_access.rs  redact.rs  runtime.rs  system.rs  wireless_native.rs
rustyjack-core/src/services/: error.rs  hotspot.rs  logs.rs  mod.rs  mount.rs  scan.rs  stats.rs  update.rs  wifi.rs
rustyjack-core/src/system/: isolation.rs  mod.rs  ops.rs
rustyjack-daemon/: Cargo.toml
rustyjack-daemon/src/: auth.rs  config.rs  dispatch.rs  locks.rs  main.rs  server.rs  state.rs  systemd.rs  telemetry.rs  validation.rs
rustyjack-daemon/src/jobs/: mod.rs
rustyjack-daemon/src/jobs/kinds/: core_command.rs  hotspot_start.rs  mod.rs  mount_start.rs  portal_start.rs  scan.rs  unmount_start.rs  update.rs  wifi_connect.rs  wifi_scan.rs
rustyjack-evasion/: Cargo.toml  README.md
rustyjack-evasion/src/: config.rs  error.rs  lib.rs  mac.rs  mac_policy.rs  passive.rs  state.rs  txpower.rs  vendor.rs
rustyjack-netlink/: Cargo.toml  README.md
rustyjack-netlink/src/: arp.rs  arp_scanner.rs  arp_spoofer.rs  bridge.rs  dhcp.rs  dhcp_server.rs  dns_server.rs  error.rs  hostapd.rs  interface.rs  iptables.rs  lib.rs  logging.rs  networkmanager.rs  nf_tables.rs  process.rs  rfkill.rs  route.rs  supplicant.rs  wireless.rs  wpa.rs
rustyjack-netlink/src/station/: backend.rs  mod.rs
rustyjack-netlink/src/station/rust_open/: mod.rs
rustyjack-netlink/src/station/rust_wpa2/: keys.rs  l2.rs  mod.rs  nl80211_ctrl.rs  nl80211_keys.rs
rustyjack-ui/: Cargo.toml
rustyjack-ui/src/: app.rs  check_hal.rs  config.rs  core.rs  display.rs  input.rs  main.rs  menu.rs  stats.rs  types.rs  util.rs
rustyjack-wireless/: Cargo.toml  README.md
rustyjack-wireless/src/: capture.rs  channel.rs  crack.rs  deauth.rs  error.rs  evil_twin.rs  frames.rs  handshake.rs  hotspot.rs  inject.rs  interface.rs  karma.rs  lib.rs  netlink_helpers.rs  nl80211.rs  nl80211_queries.rs  pipeline.rs  pmkid.rs  probe.rs  process_helpers.rs  radiotap.rs  recon.rs  rfkill_helpers.rs  stealth.rs
(+452 files in other folders)
