[workspace]
resolver = "2"
members = [
    "crates/rustyjack-commands",
    "crates/rustyjack-core",
    "crates/rustyjack-evasion",
    "crates/rustyjack-logging",
    "crates/rustyjack-ui",
    "crates/rustyjack-wireless",
    "crates/rustyjack-ethernet",
    "crates/rustyjack-encryption",
    "crates/rustyjack-wpa",
    "crates/rustyjack-netlink",
    "crates/rustyjack-portal",
    "crates/rustyjack-ipc",
    "crates/rustyjack-daemon",
    "crates/rustyjack-client",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["RustyJack Team"]
license = "MIT"
repository = "https://github.com/yourusername/rustyjack"

[workspace.dependencies]
# Shared dependencies across crates
anyhow = "1.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.release-pi]
inherits = "release"
opt-level = "s"

[profile.release-embedded]
inherits = "release"
opt-level = "s"
strip = true
