[package]
name = "rustyjack-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
libc = "0.2"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11"
walkdir = "2.4"

# Native wireless toolkit (Linux only)
[target.'cfg(target_os = "linux")'.dependencies]
rustyjack-wireless = { path = "../rustyjack-wireless" }
