[package]
name = "rustyjack-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rustyjackd"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
env_logger = "0.11"
libc = "0.2"
log = "0.4"
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt", "macros", "net", "io-util", "time", "sync", "signal"] }
tokio-util = "0.7"

rustyjack-ipc = { path = "../rustyjack-ipc" }
rustyjack-core = { path = "../rustyjack-core" }
