[package]
name = "rustyjack-evasion"
version = "0.1.0"
edition = "2021"
authors = ["RustyJack Team"]
description = "Reusable evasion and obfuscation library for network security tools"
license = "MIT"
readme = "README.md"
keywords = ["security", "mac-address", "evasion", "obfuscation", "penetration-testing"]
categories = ["network-programming", "hardware-support"]
repository = "https://github.com/yourusername/rustyjack"

[lib]
name = "rustyjack_evasion"
path = "src/lib.rs"

# Linux-only for network interface manipulation
[target.'cfg(not(target_os = "linux"))'.dependencies]

[dependencies]
# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
tracing = { version = "0.1", optional = true }

# Serialization for state persistence
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Proper random number generation
rand = "0.8"
getrandom = "0.2"

# Time handling
chrono = "0.4"

# Regex for parsing (minimal)
regex = { version = "1.10", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3.8"

[features]
default = []
# Enable tracing integration
tracing = ["dep:tracing"]
# Enable advanced parsing features
advanced = ["regex"]
# Enable all features
full = ["tracing", "advanced"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

# Optimized for embedded/Raspberry Pi
[profile.release-embedded]
inherits = "release"
opt-level = "s"
strip = true
