[package]
name = "rustyjack-netlink"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0"
log = "0.4"
thiserror = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink = "0.14"
tokio = { version = "1.0", features = ["rt", "macros", "time", "sync"] }
futures = "0.3"
ipnetwork = "0.20"
libc = "0.2"
pbkdf2 = "0.12"
sha2 = "0.10"
zbus = "4.0"
uuid = { version = "1.0", features = ["v4"] }
neli = "0.6"
netlink-packet-route = "0.19"
