[package]
name = "rustyjack-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock"] }
embedded-graphics = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
st7735-lcd = "0.10"
thiserror = "1.0"
rustyjack-core = { path = "../rustyjack-core" }
embedded-hal = "1.0"
tempfile = "3.12"
walkdir = "2.5"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
num_cpus = "1.16"
image = { version = "0.23", default-features = false, features = ["bmp"] }
tinybmp = "0.5"
embedded-hal-bus = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
linux-embedded-hal = { version = "0.4", features = [] }
gpio-cdev = "0.5"
