[package]
name = "rustyjack-core"
version = "0.1.0"
edition = "2021"

[features]
default = []
cli = ["dep:clap", "dep:tracing-subscriber"]

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"], optional = true }
filetime = "0.2"
libc = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11"
walkdir = "2.4"
ipnet = "2.9"
rustyjack-ethernet = { path = "../rustyjack-ethernet" }
rustyjack-evasion = { path = "../rustyjack-evasion" }
rustyjack-portal = { path = "../rustyjack-portal" }
rustyjack-commands = { path = "../rustyjack-commands" }
rustyjack-ipc = { path = "../rustyjack-ipc" }
rustyjack-wpa = { path = "../rustyjack-wpa" }
rand = "0.8"
zeroize = "1.7"
rustyjack-encryption = { path = "../rustyjack-encryption" }
rustyjack-logging = { path = "../rustyjack-logging" }

# Native wireless toolkit (Linux only)
[target.'cfg(target_os = "linux")'.dependencies]
rustyjack-wireless = { path = "../rustyjack-wireless" }
rustyjack-netlink = { path = "../rustyjack-netlink" }
tokio = { version = "1.0", features = ["rt", "macros"] }
bytes = "1.11"
nix = { version = "0.27", default-features = false, features = ["poll"] }
netlink-packet-core = "0.7"
netlink-packet-route = "0.19"
netlink-sys = { version = "0.8", features = ["tokio_socket"] }

[[bin]]
name = "rustyjack"
path = "src/main.rs"
required-features = ["cli"]

[dev-dependencies]
tempfile = "3.8"
