[package]
name = "rustyjack-core"
version = "0.1.10"
edition = "2021"

[features]
default = ["appliance"]
cli = ["dep:clap", "dep:tracing-subscriber"]

# Appliance forbids external process spawning.
appliance = ["rustyjack-netlink/station_rust_wpa2"]

# Lab enables external tooling and non-appliance features.
lab = ["external_tools", "dev_tools", "offensive_tools", "rustyjack-netlink/station_external"]

# External process spawning (lab only).
external_tools = []

dev_tools = []
offensive_tools = []

[dependencies]
aes-gcm = "0.10"
anyhow = "1.0"
aes = "0.8"
cbc = "0.1"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"], optional = true }
filetime = "0.2"
flate2 = "1.1"
git2 = { version = "0.19", features = ["vendored-libgit2"] }
libc = "0.2"
pbkdf2 = "0.12"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11"
tar = "0.4"
walkdir = "2.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
ipnet = "2.9"
rustyjack-ethernet = { path = "../rustyjack-ethernet" }
rustyjack-evasion = { path = "../rustyjack-evasion" }
rustyjack-portal = { path = "../rustyjack-portal" }
rustyjack-commands = { path = "../rustyjack-commands" }
rustyjack-ipc = { path = "../rustyjack-ipc" }
rustyjack-wpa = { path = "../rustyjack-wpa" }
rand = "0.8"
zeroize = "1.7"
rustyjack-encryption = { path = "../rustyjack-encryption" }
rustyjack-logging = { path = "../rustyjack-logging" }

# Native wireless toolkit (Linux only)
[target.'cfg(target_os = "linux")'.dependencies]
rustyjack-wireless = { path = "../rustyjack-wireless" }
rustyjack-netlink = { path = "../rustyjack-netlink" }
tokio = { version = "1.0", features = ["rt", "macros"] }
bytes = "1.11"
nix = { version = "0.27", default-features = false, features = ["poll"] }
netlink-packet-core = "0.7"
netlink-packet-route = "0.19"
netlink-sys = { version = "0.8", features = ["tokio_socket"] }

[[bin]]
name = "rustyjack"
path = "src/main.rs"
required-features = ["cli"]

[dev-dependencies]
tempfile = "3.8"
