[package]
name = "rustyjack-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rustyjackd"
path = "src/main.rs"

[features]
default = []
dangerous_ops = []

[dependencies]
anyhow = "1.0"
libc = "0.2"
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt", "macros", "net", "io-util", "time", "sync", "signal"] }
tokio-util = "0.7"
tracing = "0.1"
futures = "0.3"
rustyjack-logging = { path = "../rustyjack-logging" }

[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink = "0.14"

[dependencies.rustyjack-ipc]
path = "../rustyjack-ipc"

[dependencies.rustyjack-core]
path = "../rustyjack-core"
