[package]
name = "rustyjack-daemon"
version = "0.1.2"
edition = "2021"

[[bin]]
name = "rustyjackd"
path = "src/main.rs"

[features]
default = ["appliance"]

# Production profile (appliance-safe).
appliance = ["rustyjack-core/appliance"]

# Explicit opt-in for lab/dev builds.
lab = ["rustyjack-core/lab"]

core_dispatch = []
offensive_ops = []
loot_ops = []
process_ops = []

[dependencies]
anyhow = "1.0"
libc = "0.2"
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt", "macros", "net", "io-util", "time", "sync", "signal"] }
tokio-util = "0.7"
tracing = "0.1"
futures = "0.3"
rustyjack-logging = { path = "../rustyjack-logging" }

[dependencies.rustyjack-ipc]
path = "../rustyjack-ipc"

[dependencies.rustyjack-core]
path = "../rustyjack-core"

[dependencies.rustyjack-netlink]
path = "../rustyjack-netlink"

[dependencies.rustyjack-updater]
path = "../rustyjack-updater"

[dev-dependencies]
rustyjack-client = { path = "../rustyjack-client" }
rustyjack-commands = { path = "../rustyjack-commands" }
