[package]
name = "rustyjack-ethernet"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
ipnet = "2"
socket2 = { version = "0.5", features = ["all"] }
libc = "0.2"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
rustyjack-netlink = { path = "../rustyjack-netlink" }
tokio = { version = "1.0", features = ["rt"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros"] }
