[package]
name = "rustyjack-install"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "install_01_layout"
path = "src/bin/install_01_layout.rs"

[[bin]]
name = "install_02_identities"
path = "src/bin/install_02_identities.rs"

[[bin]]
name = "install_03_systemd"
path = "src/bin/install_03_systemd.rs"

[[bin]]
name = "install_04_seed_config"
path = "src/bin/install_04_seed_config.rs"

[[bin]]
name = "install_05_verify"
path = "src/bin/install_05_verify.rs"

[dependencies]
anyhow = "1.0"
hex = "0.4"
tokio = { version = "1.0", features = ["rt", "macros"] }
zbus = "4.0"
