[package]
name = "rustyjack-netlink"
version = "0.1.3"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0"
tracing = "0.1"
thiserror = "1.0"
rand = { version = "0.8", features = ["std", "std_rng"] }
hmac = "0.12"
sha1 = "0.10"
once_cell = "1.19"
aes = "0.8"
cipher = "0.4"

[features]
journald = ["systemd-journal-logger"]
default = ["station_rust_wpa2"]
station_external = []
station_rust_open = []
station_rust_wpa2 = []

[dependencies.systemd-journal-logger]
version = "2.2.2"
optional = true

[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink = "0.14"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros", "time", "sync"] }
futures = "0.3"
ipnetwork = "0.20"
libc = "0.2"
pbkdf2 = "0.12"
sha2 = "0.10"
zbus = "4.0"
uuid = { version = "1.0", features = ["v4"] }
neli = "0.6"
netlink-packet-route = "0.19"
