[package]
name = "rustyjack-portal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "rustyjack-portal"
path = "src/bin/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = "0.7"
chrono = { workspace = true }
tracing = "0.1"
serde = { workspace = true }
socket2 = { version = "0.5", features = ["all"] }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "net", "time", "sync", "signal", "fs", "io-util"] }
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["fs", "limit", "timeout"] }

rustyjack-client = { path = "../rustyjack-client" }
rustyjack-logging = { path = "../rustyjack-logging" }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
rustyjack-netlink = { path = "../rustyjack-netlink" }
