[package]
name = "rustyjack-ui"
version = "0.1.4"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock"] }
embedded-graphics = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
embedded-hal = "1.0"
tempfile = "3.12"
walkdir = "2.5"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
num_cpus = "1.16"
image = { version = "0.23", default-features = false, features = ["bmp"] }
tinybmp = "0.5"
st7735-lcd = "0.10" # Updated for embedded-hal 1.0 compatibility
tracing = "0.1"
rustyjack-commands = { path = "../rustyjack-commands" }
rustyjack-client = { path = "../rustyjack-client" }
rustyjack-evasion = { path = "../rustyjack-evasion" }
rustyjack-encryption = { path = "../rustyjack-encryption" }
rustyjack-ipc = { path = "../rustyjack-ipc" }
rustyjack-logging = { path = "../rustyjack-logging" }
rand = "0.8"
zeroize = "1.7"

[target.'cfg(target_os = "linux")'.dependencies]
linux-embedded-hal = { version = "0.4", features = [] }
libc = "0.2"
rustyjack-wpa = { path = "../rustyjack-wpa" }

[dependencies.tokio]
version = "1.0"
features = ["rt", "macros"]
